tests/ui/spirv-attr/bool-inputs-err.stderr
error: entrypoint parameter cannot contain a boolean
  --> $DIR/bool-inputs-err.rs:13:12
   |
13 |     input: bool,
   |            ^^^^

error: entrypoint parameter cannot contain a boolean
  --> $DIR/bool-inputs-err.rs:14:13
   |
14 |     output: &mut bool,
   |             ^^^^^^^^^

error: entrypoint parameter cannot contain a boolean
  --> $DIR/bool-inputs-err.rs:15:45
   |
15 |     #[rust_gpu::spirv(push_constant)] push: &bool,
   |                                             ^^^^^

error: entrypoint parameter cannot contain a boolean
  --> $DIR/bool-inputs-err.rs:16:42
   |
16 |     #[rust_gpu::spirv(uniform)] uniform: &Boolthing,
   |                                          ^^^^^^^^^^

error: aborting due to 4 previous errors

